# ap24-simulation-controller

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
coverage/html/: index.html
coverage/html/coverage/home/marcoff/rust/ap24-simulation-controller/src/: event_saver.rs.html  interacts_with_simulation.rs.html  lib.rs.html  transition.rs.html
coverage/html/coverage/home/marcoff/rust/ap24-simulation-controller/src/keypress_handler/: mod.rs.html
coverage/html/coverage/home/marcoff/rust/ap24-simulation-controller/src/network/: mod.rs.html  node_representation.rs.html
coverage/html/coverage/home/marcoff/rust/ap24-simulation-controller/src/view/: draw_options.rs.html  footer.rs.html  list.rs.html  mod.rs.html  node_detail.rs.html  stats.rs.html  (+3 more)
src/: app.rs  event_saver.rs  interacts_with_simulation.rs  lib.rs  main.rs  transition.rs
src/keypress_handler/: add_connection_handler.rs  add_node_handler.rs  main_handler.rs  mod.rs  move_handler.rs
src/model/: mod.rs  node_kind.rs  node_representation.rs  screen.rs
src/network/: mod.rs  node_kind.rs  node_representation.rs
src/screen/: mod.rs
src/tests/config_files/: input.toml
src/utilities/: app_message.rs  mod.rs  theme.rs
src/view/: draw_options.rs  footer.rs  keys.rs  list.rs  mod.rs  node_detail.rs  packet_formatter.rs  simulation.rs  stats.rs  tabs.rs
tests/: badconfig.rs  boh.rs  dummy_test.rs  edit_network.rs  keyboard_commands.rs  main_test.rs  manual.rs
tests/common/: mod.rs
tests/config_files/: client_connected_3.toml  clientcenter.toml  disconnected.toml  input.toml  line.toml  neighbor_is_self.toml  sameid.toml
