[package]
name = "ap24-simulation-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29.0"
tui-big-text = "0.7.0"
rand = "0.9.0-alpha.2"
image = "0.25.5"
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git" ,features = ["serialize"]}
crossterm = "0.28.1"
crossbeam-channel = "0.5.13"
toml = "0.8.19"
