[package]
name = "ap24-simulation-controller"
version = "0.1.1"
edition = "2021"

[features]
integration_tests = ["custom_terminal_backend","appmessage_through_crossbeam"]
custom_terminal_backend = []
appmessage_through_crossbeam = []

[dependencies]
ratatui = "0.29.0"
rand = "0.9.0-alpha.2"
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git" ,features = ["serialize"]}
crossterm = "0.28.1"
crossbeam-channel = "0.5.13"
toml = "0.8.19"
log = "0.4.22"
simplelog = "0.12.2"
skylink = { git = "https://github.com/Suge42/Skylink_drone.git" }
messages = { git = "https://github.com/The-Null-Pointer-Patrol/messages.git"}
indexmap = "2.7.1"
test-log = "0.2.17"
